recursion.lessons.recursion.koch.Crab.scala.error
Crab:3: error: ')' expected but '}' found.
    crab(levels,length*Math.sqrt(2)}
                                   ^