recursion.lessons.recursion.koch.Crab.scala.code
def crab(levels:Int, length:Double)
{   gauche(45)
    crab(levels,length*Math.sqrt(2)}

